syntax = "proto3";
package messages;

message AdministratorInfoMsg{
    string address = 1;
    uint32 port = 2;
}