syntax = "proto3";
package messages;

message StatisticMsg{
    float value = 1;
    uint32 timestamp = 2;
}